# blackmath

./: .gitignore  pyproject.toml
project/: BlackMath.ipynb  BlackMathv2.ipynb
project/.ipynb_checkpoints/: BlackMath-checkpoint.ipynb
