[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["danamestrial <chayapolbun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
numpy = "^1.23.5"
pandas = "^1.5.2"
matplotlib = "^3.6.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
